KubernetesProjekt2/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  labels:
    component: backend
    app: myapp

spec:
  template:
    metadata:
      name: backend-pod
      labels:
        component: backend
        app: myapp
    spec:
      containers:
        - name: backend-container
          image: zofiat/backend-myplastyka-app:latest
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      component: backend
