KubernetesProjekt2/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    component: frontend
    app: myapp

spec:
  template:
    metadata:
      name: nginx-pod
      labels:
        component: frontend
        app: myapp
    spec:
      containers:
        - name: nginx-container
          image: zofiat/frontend-myplastyka-app:latest

  replicas: 1
  selector:
    matchLabels:
      app: myapp
      component: frontend
