KubernetesProjekt2/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-deployment
  labels:
    component: redis
    app: myapp

spec:
  template:
    metadata:
      name: redis-pod
      labels:
        component: redis
        app: myapp
    spec:
      containers:
        - name: redis-container
          image: redis:alpine

  replicas: 1
  selector:
    matchLabels:
      app: myapp
      component: redis
