KubernetesProjekt2/nginx-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
 
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  
  selector:
    component: frontend
    app: myapp
