KubernetesProjekt2/postgres-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mypostgres-nodeport

spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30000

  selector:
    component: mypostgres
    app: myapp
